# thecov

./: .gitignore  README.md  install.sh  pyproject.toml  setup.py
example/: patchy-boss.ipynb  test.py  test_gaussian.ipynb  testing.ipynb  thecov
src/TheCov/: ThePowerCov.py  utils.py
src/thecov/: base.py  covariance.py  geometry.py  thepowercov.py  trispectrum.py  utils.py
src/thecov/tests/: test.ipynb
thecov/: __init__.py  base.py  covariance.py  geometry.py  math.py  plot.py  trispectrum.py  utils.py
thecov/tests/: test_base.py  test_gaussian.py
