[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thecov"
description = 'A python package to compute analytic covariance matrices based on Wadekar & Scoccimarro 2019 (arXiv:1910.02914).'
version = "0.3.0"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Otavio Alves", email = 'oalves@umich.edu' }
]
requires-python = ">= 3.9"
dependencies = ['numpy', 
                'scipy', 
                'tqdm',
                'Cython',
                # (see https://github.com/MP-Gadget/pmesh/issues/53)
                'pfft-python@git+https://github.com/MP-Gadget/pfft-python',
                'pypower@git+https://github.com/cosmodesi/pypower',
                "cosmoprimo@git+https://github.com/cosmodesi/cosmoprimo",
                'mockfactory'
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/cosmodesi/thecov"